--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ numpy = "^1.26.2"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
+ipykernel = "^6.28.0"
 
 [build-system]
 requires = ["poetry-core"]
